[gd_scene load_steps=4 format=3 uid="uid://br88pvgncorgq"]

[ext_resource type="Script" path="res://Objects/grapple_point.gd" id="1_6qcy1"]
[ext_resource type="Texture2D" uid="uid://c7p2v1emerilq" path="res://Images/Assets/Grapple/Grapple Point.png" id="2_lnpd4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ekjlw"]
radius = 15.1327

[node name="Grapple Point" type="Area2D" groups=["grapplePoint"]]
script = ExtResource("1_6qcy1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lnpd4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ekjlw")

[node name="GrappleCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="GrappleCooldown" to="." method="_on_grapple_cooldown_timeout"]
